package Chapter02;

public interface Print {
    public abstract void printWeek();
    public abstract void printStrong();
}
